--- a/views/index.html
+++ b/views/index.html
@@ -136,7 +136,7 @@
       <div class="connect-box" style="padding-right: 0;">
         <h2>Join Our Community</h2>
         <p>Connect with all your fellows on JSSconnnect</p>
-        <a class="waves-effect waves-light btn joinBtn" href="http://jsswire.herokuapp.com"
+        <a class="waves-effect waves-light btn joinBtn" href="https://jsswire.herokuapp.com"
           style="background-color: #557571;">Join Now<i class="material-icons left">add</i></a>
       </div>
 
@@ -180,7 +180,7 @@
       <p>A platform to connect you with all your fellows and seniors from your ecosystem of JSS.</p>
     </div>
     <div class="modal-footer">
-      <a href="http://jsswire.herokuapp.com" class="modal-close waves-effect waves-green btn"
+      <a href="https://jsswire.herokuapp.com" class="modal-close waves-effect waves-green btn"
         style="margin: 0 20px;">Connect with wire</a>
     </div>
   </div>
@@ -194,7 +194,7 @@
     <ul>
       <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
       </li>
-      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
+      <li><a href="https://jsswire.herokuapp.com" class="btn-floating red myFloat">
 
           <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
         </a>
@@ -239,7 +239,7 @@
             <li><a class="grey-text text-lighten-3" href="/blogs">Blogs</a></li>
             <li><a class="grey-text text-lighten-3" href="/resources">Ebooks</a></li>
             <li><a class="grey-text text-lighten-3" href="/usercontributions">User Contributions</a></li>
-            <li><a class="grey-text text-lighten-3" href="http://jsswire.herokuapp.com">Connect with wire</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://jsswire.herokuapp.com">Connect with wire</a></li>
             <li><a class="grey-text text-lighten-3" href="/contribute">Contribute</a></li>
           </ul>
         </div>
