--- a/views/contact.html
+++ b/views/contact.html
@@ -346,7 +346,7 @@
     <ul>
       <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
       </li>
-      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
+      <li><a href="https://jsswire.herokuapp.com" class="btn-floating red myFloat">
 
           <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
         </a>
@@ -391,7 +391,7 @@
               <li><a class="grey-text text-lighten-3" href="/blogs">Blogs</a></li>
               <li><a class="grey-text text-lighten-3" href="/resources">Ebooks</a></li>
               <li><a class="grey-text text-lighten-3" href="/usercontributions">User Contributions</a></li>
-              <li><a class="grey-text text-lighten-3" href="http://jsswire.herokuapp.com">Connect with wire</a></li>
+              <li><a class="grey-text text-lighten-3" href="https://jsswire.herokuapp.com">Connect with wire</a></li>
               <li><a class="grey-text text-lighten-3" href="/contribute">Contribute</a></li>
             </ul>
           </div>
