--- a/views/contact.html
+++ b/views/contact.html
@@ -156,10 +156,9 @@
 
         <li><a href="/blogs">Blogs</a></li>
         <li><a href="/resources">Resources</a></li>
+        <li><a href="/community">Community</a></li>
         <li><a href="/contribute">Contribute</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li id="reg"><a href="/register">Register</a></li>
-        <li id="log"><a href="/login">Login</a></li>
         <li class="tooltip" id="userProfile">
           <span class="myChip" style="margin: 10px 30px;">
             <img
@@ -172,6 +171,8 @@
             <h6 id="email">guest@guest.com</h6>
             <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="logBtn"
               href="/logout">Logout</a>
+            <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn"
+              href="/register">Login/Register</a>
           </span>
         </li>
       </ul>
@@ -192,14 +193,15 @@
         <h6 id="email1">guest@guest.com</h6>
         <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="logBtn1"
           href="/logout">Logout</a>
+        <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn1"
+          href="/register">Login/Register</a>
       </span>
     </li>
     <li><a href="/blogs" style=" color: white;">Blogs</a></li>
     <li><a href="/resources" style=" color: white;">Resources</a></li>
     <li><a href="/contribute" style=" color: white;">Contribute</a></li>
+    <li><a href="/community" style=" color: white;">Community</a></li>
     <li><a href="/contact" style=" color: white;">Contact</a></li>
-    <li id="reg1"><a href="/register" style=" color: white;">Register</a></li>
-    <li id="log1"><a href="/login" style=" color: white;">Login</a></li>
   </ul>
 
   <!--Goal-->
@@ -310,7 +312,7 @@
     <h2 style="color: #17706e;font-family: 'Roboto Condensed', sans-serif;">Drop us a line</h2>
     <h3 style="color: #84a9ac;font-family: 'Roboto Condensed', sans-serif;">We would be glad to hear from you.</h3>
 
-    <form action="/contact">
+    <form action="/contact" method="POST">
 
       <input type="text" name="name" placeholder="Name" required>
       <input type="email" name="email" placeholder="Email" required>
@@ -346,7 +348,7 @@
     <ul>
       <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
       </li>
-      <li><a href="https://jsswire.herokuapp.com" class="btn-floating red myFloat">
+      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
 
           <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
         </a>
@@ -363,66 +365,66 @@
     </ul>
   </div>
 
- <!-- Footer -->
+  <!-- Footer -->
 
   <!-- <footer class="page-footer" style="background-color: #1a1a1a;margin-top:36px;"> -->
-    <footer class="page-footer" style="background-color: #323232;margin-top:36px;">
+  <footer class="page-footer" style="background-color: #323232;margin-top:36px;">
+    <div class="container">
+      <div class="row">
+        <div style="text-align: center;margin: 75px 0;">
+          <h2>Let’s stay connected.</h2>
+          <form action="/newsletter" method="POST" style="margin: 30px 0px;">
+            <input type="email" name="email" required placeholder="Enter your Email"
+              style="width:40%;margin-right: 20px;color: white;" required>
+            <button id="newsBtn" type="submit">Subscribe</button>
+          </form>
+          <p>Sign up to receive our newsletter and exclusive updates.</p>
+          <div style="margin-top: 45px;">
+            <a href="https://www.facebook.com/JssAcademyOfTechnicalEducationnoida/" class="socials"
+              style="color: #1b6ca8;"><i class="fa fa-facebook-official"></i></a>
+            <a href="https://twitter.com/jssatenoida?lang=en" class="socials" style="color: #3282b8;"><i
+                class="fa fa-twitter-square"></i></a>
+          </div>
+        </div>
+        <hr>
+        <div class="col l3 offset-l1 s6">
+          <h5 class="white-text">Quick Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/blogs">Blogs</a></li>
+            <li><a class="grey-text text-lighten-3" href="/resources">Ebooks</a></li>
+            <li><a class="grey-text text-lighten-3" href="/usercontributions">User Contributions</a></li>
+            <li><a class="grey-text text-lighten-3" href="http://jsswire.herokuapp.com">Connect with wire</a></li>
+            <li><a class="grey-text text-lighten-3" href="/contribute">Contribute</a></li>
+          </ul>
+        </div>
+        <div class="col l3 offset-l1 s6">
+          <h5 class="white-text">Recent Blogs</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/blogs">What to do when entering a college?</a></li>
+            <li><a class="grey-text text-lighten-3" href="/blogs">What I Learned My Freshman Year of College</a></li>
+            <li><a class="grey-text text-lighten-3" href="/blogs">A glimpse into Async JavaScript</a></li>
+          </ul>
+        </div>
+        <div class="col l3 offset-l1 s6">
+          <h5 class="white-text">Contact</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/contact">Contact Us</a></li>
+            <li><a class="grey-text text-lighten-3" href="/contact#team">Our Team</a></li>
+            <li><a class="grey-text text-lighten-3" href="/feedback">Feedback</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <div class="footer-copyright">
       <div class="container">
-        <div class="row">
-          <div style="text-align: center;margin: 75px 0;">
-            <h2>Let’s stay connected.</h2>
-            <form action="/newsletter" method="POST" style="margin: 30px 0px;">
-              <input type="email" name="email" required placeholder="Enter your Email"
-                style="width:40%;margin-right: 20px;color: white;" required>
-              <button id="newsBtn" type="submit">Subscribe</button>
-            </form>
-            <p>Sign up to receive our newsletter and exclusive updates.</p>
-            <div style="margin-top: 45px;">
-              <a href="https://www.facebook.com/JssAcademyOfTechnicalEducationnoida/" class="socials"
-                style="color: #1b6ca8;"><i class="fa fa-facebook-official"></i></a>
-              <a href="https://twitter.com/jssatenoida?lang=en" class="socials" style="color: #3282b8;"><i
-                  class="fa fa-twitter-square"></i></a>
-            </div>
-          </div>
-          <hr>
-          <div class="col l3 offset-l1 s6">
-            <h5 class="white-text">Quick Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="/blogs">Blogs</a></li>
-              <li><a class="grey-text text-lighten-3" href="/resources">Ebooks</a></li>
-              <li><a class="grey-text text-lighten-3" href="/usercontributions">User Contributions</a></li>
-              <li><a class="grey-text text-lighten-3" href="https://jsswire.herokuapp.com">Connect with wire</a></li>
-              <li><a class="grey-text text-lighten-3" href="/contribute">Contribute</a></li>
-            </ul>
-          </div>
-          <div class="col l3 offset-l1 s6">
-            <h5 class="white-text">Recent Blogs</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="/blogs">What to do when entering a college?</a></li>
-              <li><a class="grey-text text-lighten-3" href="/blogs">What I Learned My Freshman Year of College</a></li>
-              <li><a class="grey-text text-lighten-3" href="/blogs">A glimpse into Async JavaScript</a></li>
-            </ul>
-          </div>
-          <div class="col l3 offset-l1 s6">
-            <h5 class="white-text">Contact</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="/contact">Contact Us</a></li>
-              <li><a class="grey-text text-lighten-3" href="/contact#team">Our Team</a></li>
-              <li><a class="grey-text text-lighten-3" href="/feedback">Feedback</a></li>
-            </ul>
-          </div>
-  
-        </div>
+        <span>© &nbsp; jssconnect.herokuapp.com &nbsp; 2020</span>
+        <span style="margin-left: 20%;">JSSconnnect</span>
+        <a class="grey-text text-lighten-4 right" href="/privacy">Privacy Policy</a>
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-          <span>© &nbsp; jssconnect.herokuapp.com &nbsp; 2020</span>
-          <span style="margin-left: 20%;">JSSconnnect</span>
-          <a class="grey-text text-lighten-4 right" href="/privacy">Privacy Policy</a>
-        </div>
-      </div>
-    </footer>
-  
+    </div>
+  </footer>
+
 
 
   <script>
@@ -494,9 +496,12 @@
     let mail1 = document.getElementById("email1");
     let picture1 = document.getElementById("picture1");
     let logBtn = document.getElementById("logBtn");
+    let regBtn = document.getElementById("regBtn");
     logBtn.style.display = "none";
     let logBtn1 = document.getElementById("logBtn1");
+    let regBtn1 = document.getElementById("regBtn1");
     logBtn1.style.display = "none";
+
 
     // const query = window.location.search.substring(1)
 
@@ -533,14 +538,6 @@
       let myEmail = localStorage.getItem("email");
       let myImg = localStorage.getItem("img");
 
-      let reg = document.getElementById("reg");
-    let log = document.getElementById("log");
-    let reg1 = document.getElementById("reg1");
-    let log1 = document.getElementById("log1");
-    reg.style.display = "none";
-      log.style.display = "none";
-      reg1.style.display = "none";
-      log1.style.display = "none";
 
       //   M.toast({ html: `Welcome ${myUsername} to Jssconnect` });
       chipName.innerHTML = myUsername;
@@ -551,6 +548,8 @@
       picture.setAttribute("src", myImg);
       logBtn.style.display = "block";
       logBtn1.style.display = "block";
+      regBtn.style.display = "none";
+            regBtn1.style.display = "none";
 
       chipName1.innerHTML = myUsername;
       name1.innerHTML = "<i class='material-icons' style='display:inline;margin:9px;'>verified_user</i>"
