--- a/views/login.html
+++ b/views/login.html
@@ -37,9 +37,9 @@
         <li><a href="/blogs">Blogs</a></li>
         <li><a href="/resources">Resources</a></li>
         <li><a href="/contribute">Contribute</a></li>
+        <li><a href="/community">Community</a></li>
         <li><a href="/contact">Contact</a></li>
         <li><a href="/register">Register</a></li>
-        <!-- <li><a href="/login">Login</a></li> -->
       </ul>
     </div>
   </nav>
@@ -49,9 +49,9 @@
     <li><a href="/blogs" style=" color: white;">Blogs</a></li>
     <li><a href="/resources" style=" color: white;">Resources</a></li>
     <li><a href="/contribute" style=" color: white;">Contribute</a></li>
+    <li><a href="/community" style=" color: white;">Community</a></li>
     <li><a href="/contact" style=" color: white;">Contact</a></li>
     <li><a href="/register" style=" color: white;">Register</a></li>
-    <!-- <li><a href="/login" style=" color: white;">Login</a></li> -->
   </ul>
 
 
