--- a/views/userblog.html
+++ b/views/userblog.html
@@ -56,7 +56,7 @@
       background-repeat: no-repeat;
       position: relative;
       color: #FFFFFF;
-      height: 670px;
+      height: 600px;
       /* padding-top: 75px; */
       display: flex;
       justify-content: center;
@@ -85,34 +85,6 @@
       }
     }
 
-    
-    #container form {
-      width: 45%;
-      margin: 60px auto;
-    }
-
-    @media screen and (max-width: 770px){
-    
-    #container form {
-      width: 90%;
-      max-width:400px;
-      margin: 60px auto;
-    }
-    #blog{
-      flex-direction:column;
-      }
-
-    }
-    
-      @media screen and (min-width:500px) and (max-width: 770px){
-   
-    #blog{
-      height:900px;
-      }
-
-    }
-    
-    
     .socials {
       font-size: 2rem;
       margin: 10px;
@@ -134,6 +106,11 @@
 
     .socials:hover {
       filter: saturate(3);
+    }
+
+    #container form {
+      width: 45%;
+      margin: 60px auto;
     }
 
     #blogForm {
@@ -162,10 +139,9 @@
 
         <li><a href="/blogs">Blogs</a></li>
         <li><a href="/resources">Resources</a></li>
+        <li><a href="/community">Community</a></li>
         <li><a href="/contribute">Contribute</a></li>
         <li><a href="/contact">Contact</a></li>
-        <li id="reg"><a href="/register">Register</a></li>
-        <li id="log"><a href="/login">Login</a></li>
         <li class="tooltip" id="userProfile">
           <span class="myChip" style="margin: 10px 30px;">
             <img
@@ -178,6 +154,8 @@
             <h6 id="email">guest@guest.com</h6>
             <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="logBtn"
               href="/logout">Logout</a>
+            <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn"
+              href="/register">Login/Register</a>
           </span>
         </li>
       </ul>
@@ -198,24 +176,25 @@
         <h6 id="email1">guest@guest.com</h6>
         <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="logBtn1"
           href="/logout">Logout</a>
+        <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn1"
+          href="/register">Login/Register</a>
       </span>
     </li>
     <li><a href="/blogs" style=" color: white;">Blogs</a></li>
     <li><a href="/resources" style=" color: white;">Resources</a></li>
     <li><a href="/contribute" style=" color: white;">Contribute</a></li>
+    <li><a href="/community" style=" color: white;">Community</a></li>
     <li><a href="/contact" style=" color: white;">Contact</a></li>
-    <li id="reg1"><a href="/register" style=" color: white;">Register</a></li>
-    <li id="log1"><a href="/login" style=" color: white;">Login</a></li>
   </ul>
 
   <div id="container">
 
     <div id="blog">
       <div>
-        <img src="public/images/blogger.png" alt="" style="margin-left:30%;width: 40%;">
+        <img src="public/images/blogger.png" alt="" style="margin-left:27%;width: 45%;">
       </div>
-      <div style="padding: 0 9%;">
-        <h3>Write your own blog</h3>
+      <div style="padding: 9%;">
+        <h2>Write your own blog</h2>
         <p>You are free to write the blog in either of HTML or markdown languages and even <br> simple text.
           Your blog will be reviewed by our team.</p>
         <p>If found worthy , then it'll be displayed on blogs dashboard.</p>
@@ -224,12 +203,13 @@
     <div id="blogForm">
       <h2 style="color: #056674;">Enter your blog details</h2>
       <form action="/userblog" method="POST">
-        <input type="text" name="title" id="title" placeholder="Enter Title of Blog" maxlength="250">
-        <input type="text" name="imageurl" id="url" placeholder="Enter image url">
-        <input type="date" name="time" id="time">
-        <input type="text" name="shortDescription" id="shortDescription" placeholder="Enter short Description of Blog">
+        <input type="text" name="title" id="title" placeholder="Enter Title of Blog" maxlength="250" required>
+        <input type="text" name="imageurl" id="url" placeholder="Enter image url" required>
+        <input type="date" name="date" id="date" required>
+        <input type="text" name="shortDescription" id="shortDescription" placeholder="Enter short Description of Blog"
+          required>
         <textarea name="blogcontent" id="blogcontent" placeholder="Enter Blog Content" style="min-height: 400px;"
-          maxlength="1500"></textarea>
+          maxlength="1500" required></textarea>
         <button class="btn waves-effect waves-light" type="submit" name="action"
           style="margin-top: 45px;padding: 0 45px;">Submit
           <i class="material-icons right">send</i>
@@ -265,7 +245,7 @@
     </ul>
   </div>
 
-   <!-- Footer -->
+  <!-- Footer -->
 
   <!-- <footer class="page-footer" style="background-color: #1a1a1a;margin-top:36px;"> -->
   <footer class="page-footer" style="background-color: #323232;margin-top:36px;">
@@ -397,6 +377,9 @@
     logBtn.style.display = "none";
     let logBtn1 = document.getElementById("logBtn1");
     logBtn1.style.display = "none";
+    let regBtn = document.getElementById("regBtn");
+    let regBtn1 = document.getElementById("regBtn1");
+
 
     // const query = window.location.search.substring(1)
 
@@ -433,14 +416,6 @@
       let myEmail = localStorage.getItem("email");
       let myImg = localStorage.getItem("img");
 
-      let reg = document.getElementById("reg");
-      let log = document.getElementById("log");
-      let reg1 = document.getElementById("reg1");
-      let log1 = document.getElementById("log1");
-      reg.style.display = "none";
-      log.style.display = "none";
-      reg1.style.display = "none";
-      log1.style.display = "none";
 
       //   M.toast({ html: `Welcome ${myUsername} to Jssconnect` });
       chipName.innerHTML = myUsername;
@@ -451,6 +426,8 @@
       picture.setAttribute("src", myImg);
       logBtn.style.display = "block";
       logBtn1.style.display = "block";
+      regBtn.style.display = "none";
+      regBtn1.style.display = "none";
 
       chipName1.innerHTML = myUsername;
       name1.innerHTML = "<i class='material-icons' style='display:inline;margin:9px;'>verified_user</i>"
