--- a/views/login.html
+++ b/views/login.html
@@ -24,7 +24,7 @@
   <script src="https://kit.fontawesome.com/efd71d3ed7.js" crossorigin="anonymous"></script>
 
   <link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
-  <title>JSS Connect</title>
+  <title>JSS Connect|Login</title>
 </head>
 
 <body>
