--- a/views/blog.html
+++ b/views/blog.html
@@ -14,7 +14,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
-  <title>Jssconnect | Blogs</title>
+  <title>JSS Connect|Blog</title>
 </head>
 <style>
   body {
