--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,9 @@
   <meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
   <meta property="og:url" content="" /> <!-- where do you want your post to link to -->
   <meta property="og:type" content="article" />
-
+  
+<!--   Google ver -->
+<meta name="google-site-verification" content="yQOOYhzcZG79A57m3G9EAneSTazh4D6v9AV1EZvFY2A" />
 
   <!-- Compiled and minified CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
