--- a/views/index.html
+++ b/views/index.html
@@ -212,7 +212,7 @@
     <ul>
       <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
       </li>
-      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
+      <li><a href="https://jsswire.herokuapp.com" class="btn-floating red myFloat">
 
           <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
         </a>
