--- a/views/profile.css
+++ b/views/profile.css
@@ -32,9 +32,8 @@
   
   /* Tooltip text */
   .tooltip .tooltiptext {
-     /* visibility: hidden; */
-      display:none;
-    /* width: 120px; */ */
+     visibility: hidden; 
+    /* width: 120px; */ 
     background-color: black;
     color: #fff;
     text-align: center;
@@ -55,12 +54,10 @@
   
   /* Show the tooltip text when you mouse over the tooltip container */
   .tooltip:hover .tooltiptext {
-    /* visibility: visible; */
-      display:block;
+    visibility: visible;
   }
   .tooltip:active .tooltiptext {
-   /* visibility: visible;  */
-            display:block;
+    visibility: visible;
   }
   
   .tooltiptext h6{
