--- a/views/contribute.html
+++ b/views/contribute.html
@@ -325,6 +325,12 @@
         two<br> and remove or keep that as per utility.</p>
     </div>
 
+      <div style="text-align: center;margin: 75px 0;margin-top: 120px;">
+    <p>Have a look on others contributions as well.</p>
+    <a href="/usercontributions" class="waves-effect waves-light btn">See Contributions<i
+        class="material-icons right">remove_red_eye</i></a>
+  </div>
+    
   </div>
 
 
