--- a/views/contact.html
+++ b/views/contact.html
@@ -210,7 +210,7 @@
     <h5 style="text-align: center;">We strive to provide you the best study material and other resources at one place.
     </h5>
     <h5 style="text-align: center;">We spent our time finding the best material so you don't have to worry.</h5>
-    <h5 style="text-align: center;">Save your preious time to do what needs to be done at the earliest.</h5>
+    <h5 style="text-align: center;">Save your precious time to do what needs to be done at the earliest.</h5>
   </div>
 
 
