--- a/views/userblog.html
+++ b/views/userblog.html
@@ -204,7 +204,7 @@
       <h2 style="color: #056674;">Enter your blog details</h2>
       <form action="/userblog" method="POST">
         <input type="text" name="title" id="title" placeholder="Enter Title of Blog" maxlength="250" required>
-        <input type="text" name="imageurl" id="url" placeholder="Enter image url" required>
+        <input type="text" name="imageurl" id="url" placeholder="Enter image url (image must br related to Blog Title)" required>
         <input type="date" name="date" id="date" required>
         <input type="text" name="shortDescription" id="shortDescription" placeholder="Enter short Description of Blog"
           required>
