--- a/views/userblog.html
+++ b/views/userblog.html
@@ -125,6 +125,12 @@
     .day {
       display: none;
     }
+    @media screen and (max-width: 770px){
+      #blog{
+         flex-direction: column;
+      }
+      
+    }
   </style>
 </head>
 
