--- a/views/userblog.html
+++ b/views/userblog.html
@@ -85,6 +85,12 @@
       }
     }
 
+    #blog img{
+      width:45%;
+      margin: 15px auto;
+      display:block;
+    }
+    
     .socials {
       font-size: 2rem;
       margin: 10px;
@@ -130,6 +136,9 @@
          flex-direction: column;
       }
       
+    #blog img{
+      width: 27%;
+    }
     }
   </style>
 </head>
@@ -197,7 +206,7 @@
 
     <div id="blog">
       <div>
-        <img src="public/images/blogger.png" alt="" style="margin-left:27%;width: 45%;">
+        <img src="public/images/blogger.png" alt="Blog">
       </div>
       <div style="padding: 9%;">
         <h2>Write your own blog</h2>
