--- a/views/userblog.html
+++ b/views/userblog.html
@@ -132,9 +132,12 @@
       display: none;
     }
     @media screen and (max-width: 770px){
-      #blog{
-         flex-direction: column;
-      }
+    #blog {
+    margin-top: 55px;
+    flex-direction: column;
+    /* height: 720px; */
+    justify-content: normal;
+    }
       
     #blog img{
       width: 27%;
