--- a/views/userblog.html
+++ b/views/userblog.html
@@ -211,7 +211,7 @@
       <div>
         <img src="public/images/blogger.png" alt="Blog">
       </div>
-      <div style="padding: 9%;">
+      <div style="padding: 0 9%;">
         <h2>Write your own blog</h2>
         <p>You are free to write the blog in either of HTML or markdown languages and even <br> simple text.
           Your blog will be reviewed by our team.</p>
