--- a/views/index.html
+++ b/views/index.html
@@ -198,7 +198,7 @@
       <p>A platform to connect you with all your fellows and seniors from your ecosystem of JSS.</p>
     </div>
     <div class="modal-footer">
-      <a href="http://jsswire.herokuapp.com" class="modal-close waves-effect waves-green btn"
+      <a href="https://jsswire.herokuapp.com" class="modal-close waves-effect waves-green btn"
         style="margin: 0 20px;">Connect with wire</a>
     </div>
   </div>
