--- a/views/joincommunity.html
+++ b/views/joincommunity.html
@@ -279,8 +279,8 @@
           <option value="CE">CE</option>
         </select>
         <input type="text" name="about" placeholder="Enter a short intro" required maxlength="70">
-        <input type="text" name="gHub" placeholder="Enter Github profile URL" required>
-        <input type="text" name="lIn" placeholder="Enter Linked In profle URL" required>
+        <input type="text" name="gHub" placeholder="Enter Github profile URL(optional)">
+        <input type="text" name="lIn" placeholder="Enter Linked In profle URL(optional)">
 
 
         <button class="btn waves-effect waves-light" type="submit" name="action">Submit
