Updated aman and harshit img url

--- a/views/contact.html
+++ b/views/contact.html
@@ -235,7 +235,7 @@
             <div class="image-box">
               <div class="img">
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C5603AQENAaCvpOwx9Q/profile-displayphoto-shrink_200_200/0?e=1603929600&v=beta&t=_K37EaR-pCDGfOXbicLiA8gzytaLaYhcHT2-d_WfmDY"
+                  src="https://bit.ly/33Nlfg3"
                   alt="team" />
                 <!-- social icons -->
                 <div class="social-icons">
@@ -258,7 +258,7 @@
             <div class="image-box">
               <div class="img">
                 <img
-                  src="https://media-exp1.licdn.com/dms/image/C5603AQHG2HBfNZ1PWw/profile-displayphoto-shrink_200_200/0?e=1603929600&v=beta&t=FWHedBfg62Y1WxXgttR9UqX2AjUqsFL07u4S0P-TJcg"
+                  src="https://bit.ly/3mMM37P"
                   alt="team" />
                 <!-- social icons -->
                 <div class="social-icons">
@@ -270,7 +270,7 @@
               </div>
             </div>
             <div class="caption-text">
-              <a href="https://devwebaman.netlify.app/" class="memberName">
+              <a href="https://www.amandixit.me" class="memberName">
                 <h4>Aman Dixit</h4>
               </a>
               <p>Web Developer</p>
