--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
 
     </div>
     <div style="width: 40%;">
-      <img src="images/topImg.png" alt="top-img">
+      <img src="images/jssconnectTop.png" alt="top-img">
     </div>
   </div>
 
