--- a/views/index.ejs
+++ b/views/index.ejs
@@ -136,8 +136,8 @@
 
 
     </div>
-    <div style="width: 40%;">
-      <img src="images/jssconnectTop.png" alt="top-img">
+    <div style="width: 49%;">
+      <img src="images/jssconnectTop.png" style="width: 100%;" alt="top-img">
     </div>
   </div>
 
