--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
         <p style="margin-bottom: 60px;font-size: 1.3rem;">Glad to see you again</p>
     <a href="/auth/google"><button class="ui inverted huge violet button" id="login-btn"><i class="fa fa-google-plus"></i> Join for free</button></a>
         
-        <a style="text-align:center" href="/register">New User? Register here</a>
+       <!- <a style="text-align:center" href="/register">New User? Register here</a> -->
     </div>
 
   </div>
@@ -22,32 +22,7 @@
 
 
 
-  <!-- Floating button 
-
-  <div class="fixed-action-btn" id="myFl">
-    <a class="btn-floating btn-large black myFloatingBtn">
-      <img src="/images/logo.png" alt="" style="width: 60px;margin: 10px -1px;filter: invert();" />
-    </a>
-    <ul>
-      <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
-      </li>
-      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
-        
-        <img src="/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
-      </a>
-      </li>
-
-      <li style="margin: 12px 0px;">
-
-        <a class="btn-floating btn-large black" id="brightness">
-          <i class="fa fa-moon-o" style="color: white;"></i>
-        </a>
-
-      </li>
-
-    </ul>
-  </div>
--->
+  
    <!-- Footer -->
 
     <%- include("footer") %>
