register option removed
removed the register option as google automatically adjusts to login/signup according to database.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
         <p style="margin-bottom: 60px;font-size: 1.3rem;">Glad to see you again</p>
     <a href="/auth/google"><button class="ui inverted huge violet button" id="login-btn"><i class="fa fa-google-plus"></i> Join for free</button></a>
         
-       <!- <a style="text-align:center" href="/register">New User? Register here</a> -->
+       <!-- <a style="text-align:center" href="/register">New User? Register here</a> -->
     </div>
 
   </div>
