removed disabled attribute from input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,11 +29,11 @@
     <form class="ui form" action="/joincommunity" method="POST" style="margin: 30px auto;">
       <div class="field">
         <label>Your Name</label>
-        <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly disabled required>
+        <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly required>
       </div>
       <div class="field">
         <label>Your Email</label>
-        <input type="email" name="email" placeholder="Your E-mail" value="<%= email %>" readonly disabled required>
+        <input type="email" name="email" placeholder="Your E-mail" value="<%= email %>" readonly required>
       </div>
       <div class="field">
         <label>Where do you reside?</label>
