Change input tag attribute
Removed disabled attribute in input tag as it prevented the data from saving into database.

--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -78,13 +78,11 @@
 
             <div class="field">
                 <label>Your Name</label>
-                <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly disabled
-                    required>
+                <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly required>
             </div>
             <div class="field">
                 <label>Your Email</label>
-                <input type="email" name="email" placeholder="Your Email" value="<%= email %>" readonly disabled
-                    required>
+                <input type="email" name="email" placeholder="Your Email" value="<%= email %>" readonly required>
             </div>
             <div class="field">
                 <label>Any Suggestions?</label>
