--- a/views/header.ejs
+++ b/views/header.ejs
@@ -32,6 +32,11 @@
     font-size: 1.3rem !important;
     display: none !important;
   }
+  .logo{
+    display: flex;
+    align-items: center;
+    padding: 10px 4px !important;
+  }
   @media only screen and (max-width: 700px) {
     .logo {
       margin: 6px auto !important;
