--- a/views/header.ejs
+++ b/views/header.ejs
@@ -36,6 +36,7 @@
     display: flex;
     align-items: center;
     padding: 10px 4px !important;
+    color: black;
   }
   @media only screen and (max-width: 700px) {
     .logo {
