--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -39,6 +39,7 @@
 
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <title>JSS Connect</title>
+  <link rel="icon" href="../public/images/favicon (1).ico">
 </head>
 
 <body>
