--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
   <!-- Loading Box -->
   <div id="loading">
     <div id="loading-header" style="text-align:center;">
-      <h4 id="quotes"><i class="fa fa-bars" aria-hidden="true"></i> QUOTES|JSSCONNECT</h4>
+      <h4 id="quotes"><i class="fa fa-bars" aria-hidden="true"></i>QUOTES|JSSCONNECT</h4>
       <h3 style="text-align:left;">Always walk through life as if you have something new to learn and you will.</h3>
       <h2 id="author-name">Aman Dixit</h2>
       <h6 id="final-word">Final Words________________________<i class="fa fa-play-circle" style="color:orange;margin-left:10px;" aria-hidden="true"></i></h6>
@@ -121,28 +121,34 @@
 
     <div id="homeText">
 
-      <h2 style="font-size: 3.3rem;font-weight: 600;"> <span style="text-align: left;font-size: 3.6rem;">Your station
+      <!-- <h2 style="font-size: 3.3rem;font-weight: 600;"> <span style="text-align: left;font-size: 3.6rem;">Your station
           for </span>
         <br>
         <span>Notes</span>,
         <span>Blogs</span>,
         <span> <br> Archives</span>
         <br> and More
-      </h2>
+      </h2> -->
+      <h2 style="font-size: 3.3rem;font-weight: 600;"> <span style="text-align: left;font-size: 3.6rem;">Your station
+        for </span>
+      <span>Notes</span>,
+      <span>Blogs</span>,
+      <span>Archives</span> and More
+    </h2>
 
-      <p style="font-size: 1.5rem;">Build skill-set with courses, resources and <br> quality blogs and connect with
+      <p style="font-size: 1.5rem;">Build skill-set with courses, resources and quality blogs and connect with
         community.</p>
       <a href="/login"> <button class="ui inverted huge violet button">Join for free</button></a>
 
 
     </div>
-    <div style="width: 45%;">
+    <div>
       <img src="images/jssconnectTop.png" style="width: 100%;" alt="top-img">
     </div>
   </div>
 
   <div id="section1" class="Box">
-    <img src="/images/blog-section.svg" alt="fgfh">
+      <img src="/images/blog-section.svg" alt="fgfh">
     <div class="sections">
       <h1>Blogs</h1>
       <p style="font-size: 1.3rem;margin-bottom: 30px;">A platform where you can find the aids provided by others based
@@ -161,7 +167,7 @@
     <p style="text-align: center;font-size: 1.5rem;margin-bottom: 90px;">Follow the footsteps or get an idea of how to
       go towards certain fields</p>
     <!-- Get Started Btn -->
-    <div class="ui violet inverted large animated fade button" tabindex="0" class="course-btn" style="margin-top:0px;width:25%;padding:10px;text-align:center;font-size:1.8rem;">
+    <div class="ui violet inverted large animated fade button" tabindex="0" class="course-btn" style="margin-top:0px;width:280px;padding:10px;text-align:center;font-size:1.8rem;">
       <div class="visible content">Get-Started >>>>></div>
       <div class="hidden content">
         Great Keep UP!!!
@@ -186,8 +192,8 @@
 
   <section id="feature1">
     <!-- <img style="margin-right: 100px;" src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://coursera_assets.s3.amazonaws.com/front-page-rebrand/value-props/accessible.svg?auto=format%2Ccompress&dpr=1&w=518&h=501&q=40" alt=""> -->
-    <div style="margin-right: 100px;" id="stats">
-      <div class="ui statistics">
+    <div  id="stats">
+      <div class="ui statistics" id="stat-circle">
         <div class="statistic" style="border: 2px dotted blue;">
           <div class="value">
             <span class="toInc">300</span>+
@@ -214,9 +220,9 @@
         </div>
       </div>
     </div>
-    <div style="width: 30%;">
+    <div id="stats-text">
       <h3 style="color: #5c4bc1;">Ease of access</h3>
-      <h1 style="margin-bottom: 20px;">Free, Flexible <br> 100% online for all</h1>
+      <h1 style="margin-bottom: 20px;">Free, Flexible 100% online for all</h1>
       <p style="font-size: 1.3rem;">Provided are many options to choose from, all free for all. Learn at your own pace,
         100% online.</p>
     </div>
@@ -272,6 +278,14 @@
           type: 'loop',
           perPage: 3,
           perMove: 1,
+          breakpoints: {
+            950: {
+              perPage: 2,
+            },
+            680:{
+              perPage: 1,
+            }
+		      }
         }).mount();
       });
     </script>
